--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
+    "@metaplex-foundation/mpl-token-metadata": "2.8.3",
     "@project-serum/anchor": "^0.26.0",
     "@solana-nft-programs/common": "^1.0.0",
     "@solana/spl-token": "^0.4.0",
