--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@metaplex-foundation/mpl-token-metadata": "2.8.3",
+    "@metaplex-foundation/umi": "1.0.0",
+    "@noble/ed25519": "^2.1.0",
     "@project-serum/anchor": "^0.26.0",
     "@solana-nft-programs/common": "^1.0.0",
     "@solana/spl-token": "^0.4.0",
@@ -21,12 +23,15 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.21",
     "browserify-zlib": "^0.2.0",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.1",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "postcss": "^8.5.3",
     "process": "^0.11.10",
     "react": "18.3.1",
@@ -40,7 +45,8 @@
     "stream-http": "^3.2.0",
     "typescript": "^4.9.5",
     "url": "^0.11.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -68,7 +74,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "tailwindcss": "3",
-    "postcss": "^8.5.3"
+    "postcss": "^8.5.3",
+    "tailwindcss": "3"
+  },
+  "browser": {
+    "path": false,
+    "stream": false,
+    "http": false,
+    "https": false
   }
 }
