--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "add": "^2.0.6",
-    "autoprefixer": "^10.4.21",
     "browserify-zlib": "^0.2.0",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
@@ -32,7 +31,6 @@
     "crypto-browserify": "^3.12.1",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
-    "postcss": "^8.5.3",
     "process": "^0.11.10",
     "react": "18.3.1",
     "react-app-rewired": "^2.2.1",
@@ -75,7 +73,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "3"
+    "tailwindcss": "^3.4.17"
   },
   "browser": {
     "path": false,
