--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
     "@metaplex-foundation/mpl-token-metadata": "2.8.3",
     "@metaplex-foundation/umi": "1.0.0",
     "@noble/ed25519": "^2.1.0",
@@ -44,7 +45,8 @@
     "typescript": "^4.9.5",
     "url": "^0.11.4",
     "web-vitals": "^2.1.4",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.22",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
