--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coral-xyz/anchor": "^0.30.1",
     "@hookform/resolvers": "^4.1.3",
     "@metaplex-foundation/mpl-token-metadata": "2.8.3",
     "@metaplex-foundation/umi": "1.0.0",
     "@noble/ed25519": "^2.1.0",
-    "@project-serum/anchor": "^0.26.0",
     "@solana-nft-programs/common": "^1.0.0",
     "@solana/spl-token": "^0.4.0",
     "@solana/wallet-adapter-base": "^0.9.23",
@@ -20,11 +20,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bn.js": "^5.1.6",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "add": "^2.0.6",
+    "bn.js": "^5.2.1",
     "browserify-zlib": "^0.2.0",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
@@ -45,6 +47,7 @@
     "typescript": "^4.9.5",
     "url": "^0.11.4",
     "web-vitals": "^2.1.4",
+    "web3.storage": "^4.5.5",
     "yarn": "^1.22.22",
     "yup": "^1.6.1"
   },
